# bitbucket-server-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  branch_cov.out  codecov.yml  commit_cov.out  coverage.out  go.mod  go.sum  latest  lefthook.yml  mkdocs.yml  pyproject.toml  reviewer_cov.out  versions.json
.../: 404.html  index.html  sitemap.xml
.github/: coverage-thresholds.env  dependabot.yml
docker/: README.md  compose.yml
docs/: IMPLEMENTATION_PLAN.md  MIGRATION_CHECKLIST.md  REPO_SETTINGS_COMMANDS.md  pyproject.toml
scripts/: README.md  bootstrap-bitbucket.sh  gen_homebrew_formula.py  gen_pkgbuild.py  nfpm.yaml  render_docs_changelog.py
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.1/: 404.html  index.html  sitemap.xml
v1.10.1/: 404.html  index.html  sitemap.xml
v1.11.0/: 404.html  index.html  sitemap.xml
v1.11.1/: 404.html  index.html  sitemap.xml
v1.11.2/: 404.html  index.html  sitemap.xml
v1.11.3/: 404.html  index.html  sitemap.xml
v1.11.4/: 404.html  index.html  sitemap.xml
v1.11.5/: 404.html  index.html  sitemap.xml
v1.11.6/: 404.html  index.html  sitemap.xml
v1.11.7/: 404.html  index.html  llms.txt  sitemap.xml
v1.11.8/: 404.html  index.html  sitemap.xml
v1.11.9/: 404.html  index.html  sitemap.xml
v1.12.0/: 404.html  index.html  sitemap.xml
v1.13.0/: 404.html  index.html  llms.txt  sitemap.xml
v1.14.0/: 404.html  index.html  sitemap.xml
v1.14.1/: 404.html  index.html  sitemap.xml
v1.15.0/: 404.html  (+2 more)
(+3323 files in other folders)
