[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-server-cli"
version = "0.1.0"
description = "Bitbucket Server CLI and Python client focused on live-behavior correctness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Platform Team" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
]

[project.scripts]
bbsc = "bitbucket_server_cli.cli:app"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "live: tests that require running local Bitbucket Server",
  "slow: long-running tests",
  "destructive: tests that mutate or delete repositories/projects",
]
